[gd_scene load_steps=2 format=3 uid="uid://dl5lxnchq4552"]

[ext_resource type="Script" path="res://scripts/ZenniRow.gd" id="1_ub0w3"]

[node name="ZenniRow" type="HBoxContainer"]
script = ExtResource("1_ub0w3")

[node name="RowTitle" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "ZENNI"

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2

[node name="HairZenni" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "1000"
horizontal_alignment = 2

[node name="VSeparator2" type="VSeparator" parent="."]
layout_mode = 2

[node name="BodyZenni" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "1000"
horizontal_alignment = 2

[node name="VSeparator3" type="VSeparator" parent="."]
layout_mode = 2

[node name="ArmsZenni" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "1000"
horizontal_alignment = 2

[node name="VSeparator4" type="VSeparator" parent="."]
layout_mode = 2

[node name="WaistZenni" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "1000"
horizontal_alignment = 2

[node name="VSeparator5" type="VSeparator" parent="."]
layout_mode = 2

[node name="LegsZenni" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "1000"
horizontal_alignment = 2

[node name="VSeparator6" type="VSeparator" parent="."]
layout_mode = 2

[node name="TotalZenni" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "1000"
horizontal_alignment = 2
